--- a/Naive_Bayes_Spam_Filter.ipynb
+++ b/Naive_Bayes_Spam_Filter.ipynb
@@ -31,7 +31,7 @@
     "# Building a Spam Filter with Naive Bayes\n",
     "\n",
     "#### The objective of this project is to apply Bayes Theorem to create an algorithm with > 80% accuracy to sort out spam messages.\n",
-    "The dataset can be downloaded [here][https://archive.ics.uci.edu/ml/datasets/sms+spam+collection]. For convention, messages are classified as either \"spam\" or \"ham\".\n",
+    "The dataset can be downloaded [here](https://archive.ics.uci.edu/ml/datasets/sms+spam+collection). For convention, messages are classified as either \"spam\" or \"ham\".\n",
     "\n",
     "### Methodology\n",
     "#### 1. Importing and inspecting the data\n",
